--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,8 +1,12 @@
 // Colors
+$green: #008000;
+$white: #fff;
+$black: #000;
+
 $dark-green: #4b5541;
 $darker-green: darken($dark-green, 7.5%);
 $lighter-black: #777;
 
 // Fonts
-$main-font: "Roboto";
-$bold-font: "Roboto Slab";
+$main-font: 'Roboto';
+$bold-font: 'Roboto Slab';
