--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'base/normalize';
+@import 'base/typography';
 @import 'base/variables';
 @import 'layout/header';
 @import 'layout/footer';
@@ -6,8 +7,7 @@
 @import 'components/distro';
 @import 'components/topnav';
 
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
+
 
 body {
   background-color: $dark-green;
@@ -40,17 +40,17 @@ img.logo {
 }
 
 .content {
-  background-color: darken(white, 2%);
+  background-color: darken($white, 2%);
   padding-top: 20px;
 
   section {
-    margin-top: 5px;
     margin-bottom: 20px;
+    margin-top: 5px;
   }
 
   h5 {
     display: inline;
-		padding: 0.25em;
+    padding: .25em;
   }
 
   p {
@@ -58,7 +58,7 @@ img.logo {
   }
 
   a {
-    color: green;
+    color: $green;
   }
 
   img {
@@ -82,15 +82,14 @@ img.logo {
 }
 
 .carasouel {
-  font-family: $bold-font;
-  text-align: center;
-  color: white;
-  height: 300px;
   background-image: url('../img/mainback.jpeg');
   box-sizing: border-box;
+  color: $white;
+  font-family: $bold-font;
+  height: 300px;
+  text-align: center;
 
   h1 {
-
     font-size: 4em;
     padding-top: 50px;
   }
@@ -112,9 +111,9 @@ img.logo {
 }
 
 img.statImg {
-  max-width: 75%;
-  max-height: auto;
   margin-bottom: 20px;
+  max-height: auto;
+  max-width: 75%;
 
   @media screen and (max-width: 800px) {
     max-width: 350px;
