--- a/includes/_footer.pug
+++ b/includes/_footer.pug
@@ -3,7 +3,7 @@ footer
   .container
     .row
       .col.col--2-of-4
-        h3 
+        h3
           a(href="http://cslabs.clarkson.edu") Clarkson Open Source Institute
         h3 Clarkson University | Science Center 336
       .col.col--2-of-4
@@ -11,4 +11,6 @@ footer
         p: a(href="mailto:mirror-admin@cslabs.clarkson.edu") mirror-admin@cslabs.clarkson.edu
     .row
       .col.col--1-of-3.col--push-1-of-3
-        p Main design by Benjamin Lannon
+        p Design by Benjamin Lannon
+        p
+          i.fa.fa-github: a(href="https://github.com/COSI-Lab/Mirror2016")  Github Repo
