--- a/css/main.css
+++ b/css/main.css
@@ -1103,7 +1103,7 @@ img.logo {
 }
 
 .carasouel {
-  background-image: url("../img/mainback.jpeg");
+  background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("../img/mainback.jpeg");
   box-sizing: border-box;
   color: #fff;
   font-family: "Roboto Slab";
