Cleaning up some styling on the site

--- a/includes/_footer.pug
+++ b/includes/_footer.pug
@@ -13,4 +13,5 @@ footer
       .col.col--1-of-3.col--push-1-of-3
         p Design by Benjamin Lannon
         p
-          i.fa.fa-github: a(href="https://github.com/COSI-Lab/Mirror2016")  Github Repo
+          i.fa.fa-github
+          a(href="https://github.com/COSI-Lab/Mirror2016") Github Repo
