--- a/pug/misc.pug
+++ b/pug/misc.pug
@@ -22,7 +22,9 @@ html(lang="en")
 		.content
 			.container
 				section
-					h1 GNU Software (Official Mirror)
+					h1 Misc. Software
+
+					h3 GNU Software (Official Mirror)
 					h5 HTTP:
 					a(href="./gnu/") http://mirror.clarkson.edu/gnu/
 					br
@@ -44,7 +46,7 @@ html(lang="en")
 					a(href="http://directory.fsf.org/GNU/") http://directory.fsf.org/GNU/
 
 				section
-					h1 Linux (Including Kernel Source)
+					h3 Linux (Including Kernel Source)
 					h5 HTTP:
 					a(href="./linux/") http://mirror.clarkson.edu/linux/
 					br
@@ -66,7 +68,7 @@ html(lang="en")
 					a(href="http://kernel.org") http://kernel.org
 
 				section
-					h1 Extra Packages for Enterprise Linux (EPEL) (Official Mirror)
+					h3 Extra Packages for Enterprise Linux (EPEL) (Official Mirror)
 					h5 HTTP:
 					a(href="./fedora-epel/") http:://mirror.clarkson.edu/fedora-epel/
 					br
@@ -88,7 +90,7 @@ html(lang="en")
 					a(href="http://fedoraproject.org/wiki/EPEL") http://fedoraproject.org/wiki/EPEL
 
 				section
-					h1 The Document Foundation (Including LibreOffice)
+					h3 The Document Foundation (Including LibreOffice)
 					h5 HTTP:
 					a(href="./tdf/") http://mirror.clarkson.edu/tdf/
 					br
@@ -110,7 +112,7 @@ html(lang="en")
 					a(href="http://www.documentfoundation.org/") http://www.documentfoundation.org/
 
 				section
-					h1 Cygwin
+					h3 Cygwin
 					h5 HTTP:
 					a(href="./cygwin/") http://mirror.clarkson.edu/cygwin/
 					br
@@ -123,7 +125,7 @@ html(lang="en")
 					a(href="https://www.cygwin.com/") https://www.cygwin.com/
 
 				section
-					h1 Isabelle (Official Mirror)
+					h3 Isabelle (Official Mirror)
 					h5 HTTP:
 					a(href="./isabelle/") http://mirror.clarkson.edu/isabelle/
 					br
