--- a/css/main.css
+++ b/css/main.css
@@ -547,7 +547,7 @@ footer {
   background-color: #383f30;
   box-shadow: 0 2px 4px #000;
   color: #fff;
-  height: 200px;
+  height: 220px;
   width: 100%;
   z-index: 2;
 }
@@ -566,6 +566,10 @@ footer a {
 
 footer a:hover {
   font-weight: bold;
+}
+
+footer i {
+  padding-right: 5px;
 }
 
 @media (max-width: 900px) {
@@ -1037,6 +1041,12 @@ body {
   margin-top: 60px;
 }
 
+@media (max-width: 900px) {
+  body {
+    margin-top: 0;
+  }
+}
+
 h1 {
   margin-top: 0;
 }
@@ -1111,9 +1121,14 @@ img.logo {
   text-align: center;
 }
 
+.carasouel .container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
 .carasouel h1 {
   font-size: 4em;
-  padding-top: 100px;
 }
 
 @media screen and (max-width: 800px) {
