--- a/pug/stats.pug
+++ b/pug/stats.pug
@@ -15,9 +15,9 @@ html(lang="en")
 			.container
 				h1 Statistics
 				p This page includes statistics on the traffic (up and down) of Mirror
-				img(src="img/vnstati-sum.png").statImg
-				img(src="img/vnstati-month.png").statImg
-				img(src="img/vnstati-day.png").statImg
-				img(src="img/vnstati-hour.png").statImg
+				img(src="img/vnstati-sum.png").stat-img
+				img(src="img/vnstati-month.png").stat-img
+				img(src="img/vnstati-day.png").stat-img
+				img(src="img/vnstati-hour.png").stat-img
 
 		include ../includes/_footer.pug
