--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,125 +8,125 @@
 @import 'components/topnav';
 
 body {
-  background-color: $dark-green;
-  font-family: $main-font;
-  margin-top: 60px;
+	background-color: $dark-green;
+	font-family: $main-font;
+	margin-top: 60px;
 
-  @media (max-width: 900px) {
-    margin-top: 0;
-  }
+	@media (max-width: 900px) {
+		margin-top: 0;
+	}
 }
 
 h1 {
-  margin-top: 0;
+	margin-top: 0;
 }
 
 hr {
-  margin: 0 auto;
-  margin-bottom: 30px;
-  width: 80%;
+	margin: 0 auto;
+	margin-bottom: 30px;
+	width: 80%;
 }
 
 .container {
-  height: 100%;
-  margin: 0 auto;
-  max-width: 960px;
-  padding-left: 2rem;
-  padding-right: 2rem;
+	height: 100%;
+	margin: 0 auto;
+	max-width: 960px;
+	padding-left: 2rem;
+	padding-right: 2rem;
 
 }
 
-img.logo {
-  margin-bottom: 10px;
-  width: 90%;
+.logo {
+	margin-bottom: 10px;
+	width: 90%;
 }
 
 .content {
-  background-color: darken($white, 2%);
-  padding-top: 20px;
+	background-color: darken($white, 2%);
+	padding-top: 20px;
 
-  section {
-    margin-bottom: 20px;
-    margin-top: 5px;
-  }
+	section {
+		margin-bottom: 20px;
+		margin-top: 5px;
+	}
 
-  h5 {
-    display: inline;
-    padding: .25em;
-  }
+	h5 {
+		display: inline;
+		padding: 0.25em;
+	}
 
-  p {
-    line-height: 1.5em;
-  }
+	p {
+		line-height: 1.5em;
+	}
 
-  a {
-    color: $green;
-  }
+	a {
+		color: $green;
+	}
 
-  img {
-    display: block;
-    height: 200px;
-    margin: 0 auto;
-  }
+	img {
+		display: block;
+		height: 200px;
+		margin: 0 auto;
+	}
 
-  .mid {
-    margin-bottom: 15px;
-  }
+	.mid {
+		margin-bottom: 15px;
+	}
 
-  .subfooter {
-    color: $lighter-black;
-    font-size: .8em;
-  }
+	.subfooter {
+		color: $lighter-black;
+		font-size: 0.8em;
+	}
 }
 
 .center {
-  text-align: center;
+	text-align: center;
 }
 
 .carasouel {
-  background: linear-gradient(
-      rgba(0,0,0,.35),
-      rgba(0,0,0,.35)
-    ),
-    url('../img/mainback.jpeg');
-  box-sizing: border-box;
-  color: $white;
-  font-family: $bold-font;
-  height: 300px;
-  text-align: center;
+	background: linear-gradient(
+			rgba(0, 0, 0, 0.35),
+			rgba(0, 0, 0, 0.35)
+		),
+		url('../img/mainback.jpeg');
+	box-sizing: border-box;
+	color: $white;
+	font-family: $bold-font;
+	height: 300px;
+	text-align: center;
 
-  .container {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
+	.container {
+		align-items: center;
+		display: flex;
+		justify-content: center;
+	}
 
-  h1 {
-    font-size: 4em;
-  }
+	h1 {
+		font-size: 4em;
+	}
 }
 
 @media screen and (max-width: 800px) {
-  .container {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
+	.container {
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
 
-  p {
-    text-align: justify;
-  }
+	p {
+		text-align: justify;
+	}
 }
 
 .row {
-  margin-bottom: 8px;
+	margin-bottom: 8px;
 }
 
-img.statImg {
-  margin-bottom: 20px;
-  max-height: auto;
-  max-width: 75%;
+.stat-img {
+	margin-bottom: 20px;
+	max-height: auto;
+	max-width: 75%;
 
-  @media screen and (max-width: 800px) {
-    max-width: 350px;
-  }
+	@media screen and (max-width: 800px) {
+		max-width: 350px;
+	}
 }
