--- a/scss/components/_topnav.scss
+++ b/scss/components/_topnav.scss
@@ -1,23 +1,23 @@
 .navlinks {
-  background-color: rgba(255, 255, 255, .2);
-  font-size: 12px;
-  height: 40px;
-  position: absolute;
-  top: 0;
-  width: 100%;
+	background-color: rgba(255, 255, 255, 0.2);
+	font-size: 12px;
+	height: 40px;
+	position: absolute;
+	top: 0;
+	width: 100%;
 
-  ul {
-    list-style-type: none;
+	ul {
+		list-style-type: none;
 
-    li {
-      display: inline;
-      margin-right: 15px;
+		li {
+			display: inline;
+			margin-right: 15px;
 
-      a {
-        color: $white;
-        font-weight: bold;
-        text-decoration: none;
-      }
-    }
-  }
+			a {
+				color: $white;
+				font-weight: bold;
+				text-decoration: none;
+			}
+		}
+	}
 }
