Adding cosi-nav web-component

--- a/includes/_header.pug
+++ b/includes/_header.pug
@@ -1,20 +1,8 @@
 //- The header for all pages
 include _mixins.pug
 
-.navlinks
-  ul 
-    li: a(href="http://cosi.clarkson.edu") CSLabs Homepage
-    li: a(href="https://dubsdot.cosi.clarkson.edu") DubsDot
-    li: a(href="http://docs.cosi.clarkson.edu") Docs
-    li: a(href="http://print.cosi.clarkson.edu") Print
-    li: a(href="http://mirror.clarkson.edu") Mirror
-    li: a(href="http://fsuvius.cosi.clarkson.edu") Fsuvius
-    li: a(href="http://talks.cosi.clarkson.edu") Talks
-    li: a(href="http://cosi-lab.github.io/meeting-minutes") Meeting Minutes
-    li: a(href="http://cosi-lab.github.io/project-updates") Project Updates
-    li: a(href="http://moodle.cosi.clarkson.edu") COSI Moodle
-    li: a(href="http://management.cosi.clarkson.edu") Management
-    
+cosi-nav
+
 header
   .container.top-header
     a(href="http://clarkson.edu/"): img(src="img/clarksonlogo.jpg")
