--- a/includes/_mainHeadTags.pug
+++ b/includes/_mainHeadTags.pug
@@ -1,3 +1,4 @@
+script(src="js/vendors/webcomponents.min.js")
 link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
 link(rel="stylesheet" type="text/css" href="css/main.css")
 script(src="js/vendors/jquery-2.1.4.min.js")
@@ -6,3 +7,4 @@ meta(name="theme-color" content="#035245")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 meta(charset="utf-8")
 meta(name="description" content="The website for Clarkson University's Software Mirror")
+link(rel="import" href="components/cosi-nav.html")
