Added CTAN to misc. page

--- a/pug/misc.pug
+++ b/pug/misc.pug
@@ -32,7 +32,7 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					|	4 times Daily
+					|	6 times Daily
 					br
 
 					h5 Homepage:
@@ -54,7 +54,7 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					|	4 times Daily
+					|	6 times Daily
 					br
 
 					h5 Homepage:
@@ -76,7 +76,7 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					| 4 times Daily
+					| 6 times Daily
 					br
 
 					h5 Homepage:
@@ -98,11 +98,24 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					|	4 times daily
+					|	6 times daily
 					br
 
 					h5 Homepage:
 					a(href="http://www.documentfoundation.org/") http://www.documentfoundation.org/
+
+				section
+					h3 CTAN
+					h5 HTTP:
+					a(href="./ctan/") http://mirror.clarkson.edu/ctan/
+					br
+
+					h5 Frequency of Updates
+					| 6 times Daily
+					br
+
+					h5 Homepage:
+					a(href="http://www.ctan.org/") http://www.ctan.org/
 
 				section
 					h3 Cygwin
@@ -111,7 +124,7 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					| 4 times Daily
+					| 6 times Daily
 					br
 
 					h5 Homepage:
@@ -124,7 +137,7 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					|	4 times Daily
+					|	6 times Daily
 					br
 
 					h5 Homepage:
