Adding Ubuntu Flavour ISOs

--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -322,6 +322,8 @@ html(lang="en")
 							h5 ISOs:
 							a(href='./ubuntu-releases/') http://mirror.clarkson.edu/ubuntu-releases/
 							br
+							h5 Flavour ISOs: (Kubuntu, Xubuntu, Mate, etc.)
+							a(href="./ubuntu-cdimage/") http://mirror.clarkson.edu/ubuntu-cdimage/
 							h5 HTTP:
 							a(href='./ubuntu/') http://mirror.clarkson.edu/ubuntu/
 							br
