Adding CPAN / CRAN repos & renaming misc to software

--- a/includes/_mixins.pug
+++ b/includes/_mixins.pug
@@ -4,10 +4,8 @@ mixin nav-list
       a(href="index.html") Mirror Home
     li#navdistributions
       a(href="distributions.html") Distributions
-    li#navmisc
-      a(href="misc.html") Misc.
-    //- li#navdirectory
-      //- a(href="directory.html") Directory Listing
+    li#navsoft
+      a(href="software.html") Software
     li#navstats
       a(href="stats.html") Statistics
     li#navhistory
