--- a/pug/software.pug
+++ b/pug/software.pug
@@ -1,11 +1,11 @@
 doctype html
 html(lang="en")
 	head
-		title Clarkson University Mirror - Misc.
+		title Clarkson University Mirror - Software
 		include ../includes/_mainHeadTags.pug
 		script.
 			window.onload = function() {
-				var foo = document.getElementById('navmisc');
+				var foo = document.getElementById('navsoft');
 				foo.setAttribute("class", "current");
 			};
 
@@ -15,7 +15,7 @@ html(lang="en")
 		.content
 			.container
 				section
-					h1 Misc. Software
+					h1 Other Software
 
 					h3 GNU Software (Official Mirror)
 					h5 HTTP:
@@ -32,7 +32,7 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					|	6 times Daily
+					|	2 times Daily
 					br
 
 					h5 Homepage:
@@ -54,14 +54,14 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					|	6 times Daily
+					|	2 times Daily
 					br
 
 					h5 Homepage:
 					a(href="http://kernel.org") http://kernel.org
 
 				section
-					h3 Extra Packages for Enterprise Linux (EPEL) (Official Mirror)
+					h3 Extra Packages for Enterprise Linux (EPEL)
 					h5 HTTP:
 					a(href="./fedora-epel/") http:://mirror.clarkson.edu/fedora-epel/
 					br
@@ -98,7 +98,7 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					|	6 times daily
+					|	4 times daily
 					br
 
 					h5 Homepage:
@@ -111,11 +111,37 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates
-					| 6 times Daily
+					| 2 times Daily
 					br
 
 					h5 Homepage:
-					a(href="http://www.ctan.org/") http://www.ctan.org/
+					a(href="http://ctan.org/") http://www.ctan.org/
+
+				section
+					h3 CPAN
+					h5 HTTP:
+					a(href="./cpan/") http://mirror.clarkson.edu/cpan/
+					br
+
+					h5 Frequency of Updates
+					| 2 times Daily
+					br
+
+					h5 Homepage:
+					a(href="http://cpan.org/") http://www.cpan.org/
+
+				section
+					h3 CRAN
+					h5 HTTP:
+					a(href="./cran/") http://mirror.clarkson.edu/cran/
+					br
+
+					h5 Frequency of Updates
+					| 2 times Daily
+					br
+
+					h5 Homepage:
+					a(href="http://cran.r-project.org/") http://cran.r-project.org/
 
 				section
 					h3 Cygwin
@@ -124,7 +150,7 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					| 6 times Daily
+					| 2 times Daily
 					br
 
 					h5 Homepage:
@@ -137,7 +163,7 @@ html(lang="en")
 					br
 
 					h5 Frequency of Updates:
-					|	6 times Daily
+					|	2 times Daily
 					br
 
 					h5 Homepage:
