--- a/pug/index.pug
+++ b/pug/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
 			foo.setAttribute("class", "current"); };
 	body
 		include ../includes/_header.pug
-		
+
 		.carasouel
 			.container
 				h1 Welcome to Mirror
@@ -30,23 +30,23 @@ html(lang="en")
 
 				.row.mid
 					.col.col--1-of-3
-						img(src="img/debian_logo.svg")
+						a(href="distributions.html"): img(src="img/debian_logo.svg")
 						h2 Linux Distros
 						p.
 							We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
 							and many more. Many are official mirrors and the majority are updated 4 times a
 							day from upstream mirrors. Learn more on the #[a(href="distributions.html") Distributions] page.
 					.col.col--1-of-3
-						img(src="img/gnu.svg")
+						a(href='./gnu'): img(src="img/gnu.svg")
 						h2 GNU Software
 						p.
 							We also host a large quantity of software maintained by the GNU Project. you can
-							find it on the #[a(href="misc.html") Misc.] page.
+							find it on the #[a(href="software.html") Software] page.
 					.col.col--1-of-3
-						img(src="img/tux.png")
+						a(href='./linux'): img(src="img/tux.png")
 						h2 Linux Kernel
 						p.
-							Versions of the Linux Kernel (Up to 4.5.X) can also be found on the #[a(href="misc.html") Misc.]
+							Versions of the Linux Kernel (Up to 4.5.X) can also be found on the #[a(href="software.html") Software]
 							page, found in the same place is documentation and souce for the kernel.
 
 				hr
