--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,2 +1,1 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
+@import url(https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab);
