--- a/pug/software.pug
+++ b/pug/software.pug
@@ -144,6 +144,19 @@ html(lang="en")
 					a(href="http://cran.r-project.org/") http://cran.r-project.org/
 
 				section
+					h3 Clonezilla
+					h5 HTTP:
+					a(href="./clonezilla/") http://mirror.clarkson.edu/clonezilla/
+					br
+
+					h5 Frequency of Updates
+					| 1 time daily
+					br
+
+					h5 Homepage:
+					a(href="http://clonezilla.org/") http://clonezilla.org/
+
+				section
 					h3 Cygwin
 					h5 HTTP:
 					a(href="./cygwin/") http://mirror.clarkson.edu/cygwin/
