Moved a few mirrors to use RIT as upstream and added Debian Security and Manjaro

--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -28,6 +28,7 @@ html(lang="en")
 							li: a(href='#gentoo') Gentoo
 							li: a(href='#ipfire') IPFire
 							li: a(href='#mint') LinuxMint
+							li: a(href='#manjaro') Manjaro Linux
 							li: a(href='#openbsd') OpenBSD
 							li: a(href='#opensuse') OpenSUSE
 							li: a(href='#parrotsec') Parrot Security OS
@@ -64,7 +65,7 @@ html(lang="en")
 							br
 							br
 							h5 Upstream Mirror:
-							a(href="http://mirror.cs.pitt.edu") mirror.cs.pitt.edu
+							a(href="http://mirrors.rit.edu") mirrors.rit.edu
 							br
 							h5 Homepage:
 							a(href='http://www.archlinux.org/') http://www.archlinux.org/
@@ -79,7 +80,7 @@ html(lang="en")
 							br
 							br
 							h5 Upstream Mirror:
-							a(href="http://mirror.es.its.nyu.edu") mirror.es.its.nyu.edu
+							a(href="http://mirrors.rit.edu") mirrors.rit.edu
 							br
 
 							h5 Homepage:
@@ -93,6 +94,9 @@ html(lang="en")
 							h5 HTTP:
 							a(href='./debian/') http://mirror.clarkson.edu/debian/
 							br
+							h5 Security Updates:
+							a(href='./debian-security/') http://mirror.clarkson.edu/debian-security/
+							br
 							h5 Rsync:
 							| rsync://mirror.clarkson.edu/debian-cd
 							br
@@ -101,7 +105,7 @@ html(lang="en")
 							br
 							br
 							h5 Upstream Mirrors:
-							a(href="http://ftp.us.debian.org") ftp.us.debian.org
+							a(href="http://mirrors.rit.edu") mirrors.rit.edu
 							|	&
 							a(href="http://cdimage.debian.org") cdimage.debian.org
 							br
@@ -121,7 +125,7 @@ html(lang="en")
 							br
 							br
 							h5 Upstream Mirror:
-							a(href="http://mirror.cs.pitt.edu") mirror.cs.pitt.edu
+							a(href="http://mirrors.rit.edu") mirrors.rit.edu
 							br
 							h5 Homepage:
 							a(href='http://fedoraproject.org/') http://fedoraproject.org/
@@ -159,7 +163,7 @@ html(lang="en")
 							br
 							br
 							h5 Upstream Mirror:
-							a(href="http://gentoo.cs.uni.edu") gentoo.cs.uni.edu
+							a(href="http://mirrors.rit.edu") mirrors.rit.edu
 							br
 							h5 Homepage:
 							a(href='http://www.gentoo.org/') http://www.gentoo.org/
@@ -209,6 +213,21 @@ html(lang="en")
 							br
 							h5 Homepage:
 							a(href='http://www.linuxmint.com/') http://www.linuxmint.com/
+
+						.distro#manjaro
+							h3 Manjaro Linux
+							h5 HTTP:
+							a(href='./manjaro/') http://mirror.clarkson.edu/manjaro/
+							br
+							h5 Rsync:
+							| rsync://mirror.clarkson.edu/manjaro
+							br
+							br
+							h5 Upstream Mirror
+							a(href='http://ftp.halifax.rwth-aachen.de') ftp.halifax.rwth-aachen.de
+							br
+							h5 Homepage:
+							a(href='https://manjaro.github.io/') https://manjaro.github.io/
 
 						.distro#openbsd
 							h3 OpenBSD
