Aligning distros to properly say which are official currently

--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -113,7 +113,7 @@ html(lang="en")
 							a(href='http://www.debian.org/') http://www.debian.org/
 
 						.distro#fedora
-							h3 Fedora (Official Mirror)
+							h3 Fedora
 							h5 ISOs:
 							a(href='./fedora/linux/releases/') http://mirror.clarkson.edu/fedora/linux/releases/
 							br
@@ -246,7 +246,7 @@ html(lang="en")
 							a(href='http://www.openbsd.org/') http://www.openbsd.org/
 
 						.distro#opensuse
-							h3 OpenSUSE
+							h3 OpenSUSE (Official Mirror)
 							h5 HTTP:
 							a(href='./opensuse/') http://mirror.clarkson.edu/opensuse/
 							br
@@ -262,7 +262,7 @@ html(lang="en")
 							a(href='https://www.opensuse.org/') https://www.opensuse.org/
 
 						.distro#parrotsec
-							h3 Parrot Security OS
+							h3 Parrot Security OS (Official Mirror)
 							h5 HTTP:
 							a(href='./parrot/') http://mirror.clarkson.edu/parrot/
 							br
@@ -359,7 +359,7 @@ html(lang="en")
 							a(href='http://www.ubuntu.com/') http://www.ubuntu.com/
 
 						.distro#voidlinux
-							h3 Void Linux
+							h3 Void Linux (Official Mirror)
 							h5 HTTP:
 							a(href='./voidlinux/') http://mirror.clarkson.edu/voidlinux/
 							br
