SliTaz Linux added

--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -36,6 +36,7 @@ html(lang="en")
 							li: a(href='#sabayon') Sabayon
 							li: a(href='#serenity') Serenity Linux
 							li: a(href='#slackware') Slackware
+							li: a(href='#slitaz') SliTaz Linux
 							li: a(href='#ubuntu') Ubuntu
 							li: a(href='#voidlinux') Void Linux
 
@@ -332,6 +333,21 @@ html(lang="en")
 							br
 							h5 Homepage:
 							a(href='http://www.slackware.com/') http://www.slackware.com/
+
+						.distro#slitaz
+							h3 SliTaz Linux
+							h5 HTTP:
+							a(href='./slitaz/') http://mirror.clarkson.edu/slitaz
+							br
+							h5 Rsync:
+							| rsync://mirror.clarkson.edu/slitaz
+							br
+							br
+							h5 Upstream Mirror:
+							a(href='http://mirror1.slitaz.org/') mirror1.slitaz.org
+							br
+							h5 Homepage:
+							a(href='http://www.slitaz.org/en/') http://www.slitaz.org/en/
 
 						.distro#ubuntu
 							h3 Ubuntu (Official Mirror)
