Listing SliTaz as an offical mirror

--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -335,7 +335,7 @@ html(lang="en")
 							a(href='http://www.slackware.com/') http://www.slackware.com/
 
 						.distro#slitaz
-							h3 SliTaz Linux
+							h3 SliTaz Linux (Offical Mirror)
 							h5 HTTP:
 							a(href='./slitaz/') http://mirror.clarkson.edu/slitaz
 							br
