Listing Manjaro as an offical mirror

--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -216,7 +216,7 @@ html(lang="en")
 							a(href='http://www.linuxmint.com/') http://www.linuxmint.com/
 
 						.distro#manjaro
-							h3 Manjaro Linux
+							h3 Manjaro Linux (Official Mirror)
 							h5 HTTP:
 							a(href='./manjaro/') http://mirror.clarkson.edu/manjaro/
 							br
