IP stats on stats page

--- a/pug/stats.pug
+++ b/pug/stats.pug
@@ -14,6 +14,7 @@ html(lang="en")
 		.content
 			.container
 				h1 Statistics
+				include ../includes/_ips.pug
 				p This page includes statistics on the traffic (up and down) of Mirror
 				img(src="img/vnstati-sum.png").stat-img
 				img(src="img/vnstati-month.png").stat-img
