Changed a few things: contact email, new official mirror

--- a/includes/_footer.pug
+++ b/includes/_footer.pug
@@ -8,7 +8,7 @@ footer
         h3 Clarkson University | Science Center 336
       .col.col--2-of-4
         h3 Contact
-        p: a(href="mailto:mirror-admin@cslabs.clarkson.edu") mirror-admin@cslabs.clarkson.edu
+        p: a(href="mailto:newmanre@clarkson.edu") newmanre@clarkson.edu
     .row
       .col.col--1-of-3.col--push-1-of-3
         p Design by Benjamin Lannon
