--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -72,7 +72,7 @@ html(lang="en")
 							a(href='http://www.archlinux.org/') http://www.archlinux.org/
 
 						.distro#centos
-							h3 CentOS
+							h3 CentOS (Official Mirror)
 							h5 HTTP:
 							a(href='./centos/') http://mirror.clarkson.edu/centos/
 							br
