Expanding History page to link to COSI News Article

--- a/pug/history.pug
+++ b/pug/history.pug
@@ -14,7 +14,11 @@ html(lang="en")
     .content
       .container
         h1 History
-        p Mirror has existed for about a decade in the labs.
+        p.
+          According to archived COSI webpages, Mirror has existed as early as October 2002.
+          The current server is the third iteration that has run the mirror service. A longer
+          article on the history of Mirror can currently be found on #[a(href="https://cosi-lab.github.io/meeting-minutes/news/2016/08/08/Weekly-Newsletter.html") Meeting Minutes] and
+          will eventually be put on the upcoming COSI History website.
 
       .container
         h1 Sponsors
