--- a/pug/stats.pug
+++ b/pug/stats.pug
@@ -14,7 +14,7 @@ html(lang="en")
 		.content
 			.container
 				h1 Statistics
-				include ../includes/_ips.pug
+				//- include ../includes/_ips.pug (uncomment this when being put onto the server)
 				p This page includes statistics on the traffic (up and down) of Mirror
 				img(src="img/vnstati-sum.png").stat-img
 				img(src="img/vnstati-month.png").stat-img
